--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,30 @@
 @import "Bootstrap/bootstrap-grid.css";
 @import "fonts.css";
+@import "FontAwesome/brands.css";
 
 * {
     font-family: "Roboto";
-    font-weight: 400;
+}
+
+i {
+    font-style: normal;
 }
 
 body {
+    margin: 0;
     min-width: 375px;
     overflow-x: hidden;
-    -webkit-overflow-x: hidden;
+    color: #3A3A3A;
+    font-weight: 400;
 }
 
 a {
     text-decoration: none;
     color: #3A3A3A;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-weight: 700;
 }
 
 .flex {
@@ -73,6 +83,7 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
     transition: all .2s ease;
 }
 
@@ -83,6 +94,15 @@ a {
 @media screen and (max-width: 650px) {
     .header {
         padding: 0 40px 0 40px;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .menu-item-logo a {
+        font-size: 36px;
+    }
+    .menu-item a {
+        font-size: 18px;
     }
 }
 
